# data-engineering-rag

./: .envrc_template  .gitignore  Makefile  README.md  agents.ipynb  data-processing-code.ipynb  data-processing.ipynb  debug.ipynb  pyproject.toml
data/: de-zoomcamp-processed.json
evals/: analysis.ipynb  evaluation_results.csv  evaluations.ipynb  generated_questions.csv
evals/ai_logs/: gh_agent_20250929_141108_2f531f.json  gh_agent_20250929_141108_3827e8.json  gh_agent_20250929_141108_422c68.json  gh_agent_20250929_141108_58b552.json  gh_agent_20250929_141108_b4dcd0.json  gh_agent_20250929_141110_2f76ed.json  gh_agent_20250929_141114_5afe5a.json  gh_agent_20250929_141116_911922.json  gh_agent_20250929_141117_a1e2d9.json  gh_agent_20250929_141120_d25818.json  gh_agent_20250929_141121_d26d30.json  gh_agent_20250929_141123_015825.json  gh_agent_20250929_141123_c08c06.json  gh_agent_20250929_141124_941907.json  gh_agent_20250929_141126_a0aa10.json  gh_agent_20250929_141132_0fd3f7.json  gh_agent_20250929_141134_368338.json  gh_agent_20250929_141136_a31466.json  gh_agent_20250929_141137_2b2279.json  gh_agent_20250929_141139_3ab087.json  gh_agent_20250929_141144_938f1c.json  gh_agent_20250929_141149_ca4951.json  gh_agent_20250929_141152_02a582.json  gh_agent_20250929_141152_800bb8.json  gh_agent_20250929_141152_c6ed18.json  gh_agent_20250929_141153_2f8d0d.json  gh_agent_20250929_141158_15522a.json  gh_agent_20250929_141159_247942.json  gh_agent_20250929_141202_460d93.json  (+121 more)
zc_agent/: ingest.py  llm.py  load_data.py  logs.py  main.py  prepare_data.py  search_agent.py
(+14 files in other folders)
